--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^17.0.0-rc.0",
+    "react-datamaps": "^0.4.1",
     "react-dom": "^17.0.0-rc.0",
     "react-router-dom": "^5.2.0"
   },
